# TowerToys

./: .gitignore  CMakeLists.txt  README.md  ShowerToys.iss  TowerToys.iss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
resources/: modules.json
resources/styles/: style.qss
src/core/AI/: aimanager.cpp  aimanager.h
src/core/Actions/: action.h  actionregistry.cpp  actionregistry.h  delayaction.cpp  delayaction.h  openappaction.cpp  openappaction.h  openfolderaction.cpp  openfolderaction.h  openurlaction.cpp  openurlaction.h  openvscodefolderaction.cpp  openvscodefolderaction.h  runcommandaction.cpp  runcommandaction.h  typekeystrokeaction.cpp  typekeystrokeaction.h
src/core/AppController/: appcontroller.cpp  appcontroller.h
src/core/HotkeyManager/: hotkeymanager.cpp  hotkeymanager.h  hotkeyrecorder.cpp  hotkeyrecorder.h
src/core/LocalShareServer/: localshareserver.cpp  localshareserver.h
src/core/Utils/: appdiscoverymanager.cpp  appdiscoverymanager.h
src/modules/: moduleinfo.h  modulemanager.cpp  modulemanager.h
src/modules/ClipboardSync/: clipboardsyncmanager.cpp  clipboardsyncmanager.h  clipboardsyncwidget.cpp  clipboardsyncwidget.h  clipboardsyncwidget.ui
src/modules/FileShare/: filesharemanager.cpp  filesharemanager.h  filesharewidget.cpp  filesharewidget.h  filesharewidget.ui
src/modules/MacroManager/: Action.h  addactiondialog.cpp  addactiondialog.h  addactiondialog.ui  aigeneratordialog.cpp  aigeneratordialog.h  aigeneratordialog.ui  macro.cpp  macro.h  macromanager.cpp  macromanager.h  macromanagerwidget.cpp  macromanagerwidget.h  macromanagerwidget.ui
src/ui/: settingswidget.cpp  settingswidget.h  settingswidget.ui  welcomewidget.ui
